 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 4
============

* [cdunde]: Created a new function on the Commands menu and RMB editor & tree-view menus to create a new
          - model component from selected Model Mesh faces and remove them from their current component.
          - Fixed error of "Pass face selection to Skin-view" if a face selection is made in the editor
          - before the Skin-view is opened at least once in that session.
          - Fixed redrawing of handles in areas that hints show once they are gone.

* [cdunde]: Changed "Pass Face Selection to Skin-view" to real time updating and
          - added function to Sync Face Selection in the Editor to the Skin-view.

* [DanielPharos]: OpenGL renderer shouldn't cause weird line-erasing when a tooltip disappears anymore.

* [cdunde]: Setup Model Editor views vertex "Pick and Move" functions with two different movement methods.

* [cdunde]: Added editor views rectangle selection for model mesh faces when in that Linear handle mode.
          - Changed selected face outline drawing method to greatly increase drawing speed.

6.5.0 Beta 3.0
==============

* [cdunde]: Fixed the Model Editor Linear Handle to work properly in
          - conjunction with the Views Options dialog settings.

* [cdunde]: Fixed Model Editor fillcolor to display correctly in 3D view after vertex drag.

* [cdunde]: Added Model Editor Skin-view 'Ticks' drawing methods, during drags, to its Options menu.

* [cdunde/DanielPharos]: Added Linear Handle to the Model Editor's Skin-view page and
          - setup color selection and drag options for it and other fixes with DanielPharos.
