@@ -1011,6 +1011,7 @@ Strings = {
     -103: "%d texture(s) could not be found. Are you sure you want to continue ?",
     -104: "This command uses the 3D viewer selected in options. Note that if you get a black screen it probably means you are looking at a part of your map where there is no light. In case of trouble (or to disable light computation) see the viewer section of the configuration dialog box and try again.\n\nIt is recommended to save your work first. Ok to load 3D viewer now ?",
     -105: "Note: when this button is pressed, the normal handles around the objects in your map are replaced by pink handles that let you do 'linear mapping' operations.\n\n'Linear mapping' operations include rotations, zooms, and various distortions.\n\nClick again on this button to get the normal handles.",
+    -106: "Cannot drop this item here.",
 
     -409: "Bezier",
 
@@ -1020,6 +1021,9 @@ Strings = {
 
 # ----------- REVISION HISTORY ------------
 #$Log$
+#Revision 1.105  2007/09/04 14:38:21  danielpharos
+#Fix the white-line erasing after a tooltip disappears in OpenGL. Also fix an issue with quality settings in software mode.
+#
 #Revision 1.104  2007/08/15 16:28:11  danielpharos
 #HUGE update to HL2: Took out some code that's now not needed anymore.
 #
