@@ -23,6 +23,9 @@ http://www.planetquake.com/quark - Contact information in AUTHORS.TXT
 $Header$
 ----------- REVISION HISTORY ------------
 $Log$
+Revision 1.6  2005/09/28 10:49:02  peter-b
+Revert removal of Log and Header keywords
+
 Revision 1.4  2001/03/20 21:37:18  decker_dk
 Updated copyright-header
 
@@ -44,11 +47,20 @@ type
   QMiscGroup = Class(QMdlObject)
   public
     class function TypeInfo: String; override;
+    function IsAllowedParent(Parent: QObject) : Boolean; override;
   end;
 
 implementation
 
-uses QkObjectClassList;
+uses QkObjectClassList, QkModelRoot;
+
+function QMiscGroup.IsAllowedParent(Parent: QObject) : Boolean;
+begin
+  if (Parent=nil) or (Parent is QModelRoot) then
+    Result:=true
+  else
+    Result:=false;
+end;
 
 class function QMiscGroup.TypeInfo;
 begin
