@@ -23,6 +23,9 @@ http://www.planetquake.com/quark - Contact information in AUTHORS.TXT
 $Header$
 ----------- REVISION HISTORY ------------
 $Log$
+Revision 1.9  2007/01/08 19:28:41  danielpharos
+Splitted the Ed3DFX file into two separate renderers: Software and Glide
+
 Revision 1.8  2005/09/28 10:49:02  peter-b
 Revert removal of Log and Header keywords
 
@@ -56,6 +59,7 @@ type
   QSkinDrawObject = class(QMdlObject)
   public
     class function TypeInfo: String; override;
+    function IsAllowedParent(Parent: QObject) : Boolean; override;
     procedure Dessiner; override;
     procedure CouleurDessin(var C: TColor);
   end;
@@ -63,6 +67,14 @@ type
 implementation
 
 uses EdSoftware, PyMapView, quarkx, travail, pyobjects, QkModelRoot, qkComponent, setup, QkObjectClassList;
+
+function QSkinDrawObject.IsAllowedParent(Parent: QObject) : Boolean;
+begin
+  if (Parent=nil) or (Parent is QComponent) then
+    Result:=true
+  else
+    Result:=false;
+end;
 
 procedure QSkinDrawObject.CouleurDessin;
 var
